clusters/gke-deep-dive-app.yaml
apiVersion: apps/v1
kind: Deployment
  metadata:
  labels:
    app: gke-deep-dive-app
  name: gke-deep-dive-app
spec:
  selector:
   matchLabels:
    app: gke-deep-dive-app
  template:
    metadata:
      labels:
        app: gke-deep-dive-app
    spec:
      containers:
      - image: gcr.io/google-containers/serve_hostname
        name: gke-deep-dive
        ports:
        - containerPort: 9376
           protocol: TCP
