clusters/gke-deep-dive-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-deep-dive-ing
spec:
  defaultBackend:
    service:
      name: gke-deep-dive-svc # Name of the Service targeted by the Ingress
      port:
        number: 80 # Should match the port used by the Service
